Reorganizar la estructura del frontend y fortalecer el flujo operativo de reservas, estancias y pagos para mantener consistencia entre backend y UI. Se migra fronted->frontend, se actualizan servicios/controladores críticos y se incorporan pruebas de soporte para validar los nuevos escenarios.